@@ -149,6 +149,9 @@ Trunk -  Unreleased
     HIVE-845. Shims do not build against latest hadoop
     (Cyrus Katrak via namit)
 
+    HIVE-858. Better logging for script operator even in case of failure
+    (Zheng Shao via namit)
+
 Release 0.4.0 -  Unreleased
 
   INCOMPATIBLE CHANGES
